compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_local_function.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 86
expression: "\nfn my_fn() {\n  Nil\n}\n\nfn main() {\n  my_fn\n}\n"
---
fn my_fn() {
  Nil
}

fn main() {
  my_fn
  ▔↑▔▔▔
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nfn() -> Nil\n```\n",
    ),
)
