compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_works_even_for_invalid_code.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nfn invalid() { 1 + Nil }\nfn valid() { Nil }\n"
---
fn invalid() { 1 + Nil }
fn valid() { Nil }
▔▔▔↑▔▔▔▔▔▔        


----- Hover content -----
Scalar(
    String(
        "```rakun\nfn() -> Nil\n```\n",
    ),
)
